--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 #colortest{
-    
     height: 100px;
     width: 100px;
     margin: 50px 0px 50px;
@@ -9,10 +8,9 @@
     background-color: coral;
     color:white;
     font-size: 50px;
-    width: fit-content;
     padding: 10px;
-    height: 50px;
-    margin-left: 860px;
+    width:500px;
+   height:100px;
     }
     body{
         text-align: center;
